<resources>
    <string name="app_name">BusApp</string>
    <string name="s_no">S.NO</string>
    <string name="stops">STOPS</string>
    <string name="time">TIME</string>
    <string name="_01">01</string>
    <string name="_02">02</string>
    <string name="choose_bus_no">CHOOSE BUS NO</string>
    <string name="bus_no_12">BUS NO : 12</string>
    <string name="bus_no_14">BUS NO : 14</string>
    <string name="bus_no_16">BUS NO : 16</string>
    <string name="bus_no_17">BUS NO : 17</string>
    <string name="bus_no_18">BUS NO : 18</string>
    <string name="bus_no_20">BUS NO : 20</string>
    <string name="bus_no_21">BUS NO : 21</string>
    <string name="bus_no_22">BUS NO : 22</string>
    <string name="choose_bus_no2">CHOOSE BUS NO</string>
    <string name="bus_no_01">BUS NO : 01</string>
    <string name="bus_no_03">BUS NO : 03</string>
    <string name="bus_no_04">BUS NO : 04</string>
    <string name="bus_no_05">BUS NO : 05</string>
    <string name="bus_no_06">BUS NO : 06</string>
    <string name="bus_no_07">BUS NO : 07</string>
    <string name="bus_no_09">BUS NO : 09</string>
    <string name="bus_no_10">BUS NO : 10</string>
    <string name="next">NEXT</string>
    <string name="stops1">STOPS</string>
    <string name="ramanathapuram">RAMANATHAPURAM</string>
    <string name="_7_00">7:00</string>
    <string name="gem_hospital">GEM HOSPITAL</string>
    <string name="_7_05">7:05</string>
    <string name="puliyakulam">PULIYAKULAM</string>
    <string name="_03">03</string>
    <string name="_7_10">7:10</string>
    <string name="_04">04</string>
    <string name="saveripalayam">SAVERIPALAYAM</string>
    <string name="_7_12">7:12</string>
    <string name="gv_residency">GV RESIDENCY</string>
    <string name="_05">05</string>
    <string name="_7_15">7:15</string>
    <string name="_06">06</string>
    <string name="upilipalayam">UPILIPALAYAM</string>
    <string name="_7_18">7:18</string>
    <string name="_07">07</string>
    <string name="singanallur">SINGANALLUR</string>
    <string name="_7_20">7:20</string>
    <string name="_08">08</string>
    <string name="esi">ESI</string>
    <string name="_7_25">7:25</string>
    <string name="_09">09</string>
    <string name="lions_club">LIONS CLUB</string>
    <string name="_7_28">7:28</string>
    <string name="_10">10</string>
    <string name="ramanuja_nagar">RAMANUJA NAGAR</string>
    <string name="_7_30">7:30</string>
    <string name="_11">11</string>
    <string name="manis_theatre">MANIS THEATRE</string>
    <string name="_7_45">7:45</string>
    <string name="_12">12</string>
    <string name="college">COLLEGE</string>
    <string name="_8_15">8:15</string>
    <string name="get_location">GET LOCATION</string>
    <string name="permanallur">PERMANALLUR</string>
    <string name="anna_nagar">ANNA NAGAR</string>
    <string name="_7_08">7:08</string>
    <string name="pandiyan_nagar">PANDIYAN NAGAR</string>
    <string name="puluva_patty">PULUVA PATTY</string>
    <string name="pichampalayam">PICHAMPALAYAM</string>
    <string name="_7_14">7:14</string>
    <string name="mettupalayam">METTUPALAYAM</string>
    <string name="_7_21">7:21</string>
    <string name="miller_stop">MILLER STOP</string>
    <string name="_7_22">7:22</string>
    <string name="pushpa_theater">PUSHPA THEATER</string>
    <string name="_7_23">7:23</string>
    <string name="sap_theatre">SAP THEATRE</string>
    <string name="_7_27">7:27</string>
    <string name="periyar_colony">PERIYAR COLONY</string>
    <string name="_7_32">7:32</string>
    <string name="thaneer_pandhal">THANEER PANDHAL</string>
    <string name="_7_37">7:37</string>
    <string name="ammapalayam">AMMAPALAYAM</string>
    <string name="_7_40">7:40</string>
    <string name="_13">13</string>
    <string name="bharathiyar_university">BHARATHIYAR UNIVERSITY</string>
    <string name="kalveerampalayam">KALVEERAMPALAYAM</string>
    <string name="_7_03">7:03</string>
    <string name="navoor_pirivu">NAVOOR PIRIVU</string>
    <string name="thiruvalluvar_nagar">THIRUVALLUVAR NAGAR</string>
    <string name="_7_06">7:06</string>
    <string name="alam_maram">ALAM MARAM</string>
    <string name="vadavalli">VADAVALLI</string>
    <string name="vadavalli_high_school">VADAVALLI HIGH SCHOOL</string>
    <string name="_7_17">7:17</string>
    <string name="pal_company">PAL COMPANY</string>
    <string name="gandhi_park">GANDHI PARK</string>
    <string name="poo_market">POO MARKET</string>
    <string name="_7_35">7:35</string>
    <string name="nava_india">NAVA INDIA</string>
    <string name="peelamedu">PEELAMEDU</string>
    <string name="_7_48">7:48</string>
    <string name="varadharaja_mill">VARADHARAJA MILL</string>
    <string name="_7_50">7:50</string>
    <string name="amman_kovil">AMMAN KOVIL</string>
    <string name="srp_mills">SRP MILLS</string>
    <string name="l_g_b_nagar">L.G.B. NAGAR</string>
    <string name="bharathi_nagar">BHARATHI NAGAR</string>
    <string name="athipalayam_pirivu">ATHIPALAYAM PIRIVU</string>
    <string name="cms_school">CMS SCHOOL</string>
    <string name="ganapathy">GANAPATHY</string>
    <string name="gandhipuram">GANDHIPURAM</string>
    <string name="_7_16">7:16</string>
    <string name="womens_polytechnique">WOMENS POLYTECHNIQUE</string>
    <string name="gk_hospital">GK HOSPITAL</string>
    <string name="_14">14</string>
    <string name="kmch">KMCH</string>
    <string name="_7_52">7:52</string>
    <string name="_15">15</string>
    <string name="goldwins">GOLDWINS</string>
    <string name="_7_54">7:54</string>
    <string name="thottipalayam_pirivu">THOTTIPALAYAM PIRIVU</string>
    <string name="_16">16</string>
    <string name="_7_56">7:56</string>
    <string name="_17">17</string>
    <string name="pls_nagar">PLS NAGAR</string>
    <string name="_8_00">8:00</string>
    <string name="_18">18</string>
    <string name="chinniyampalayam">CHINNIYAMPALAYAM</string>
    <string name="_8_05">8:05</string>
    <string name="_19">19</string>
    <string name="neelambur">NEELAMBUR</string>
    <string name="_8_10">8:10</string>
    <string name="_20">20</string>
    <string name="mandripalayam">MANDRIPALAYAM</string>
    <string name="_6_55">6:55</string>
    <string name="keethanur">KEETHANUR</string>
    <string name="palladam_bus_stand">PALLADAM BUS STAND</string>
    <string name="palladam_ctc">PALLADAM CTC</string>
    <string name="panapatti_pirivu">PANAPATTI PIRIVU</string>
    <string name="iyyampalayam">IYYAMPALAYAM</string>
    <string name="lakshmi_mill">LAKSHMI MILL</string>
    <string name="karanampettai">KARANAMPETTAI</string>
    <string name="sulur_airforce">SULUR AIRFORCE</string>
    <string name="kangeyam">KANGEYAM</string>
    <string name="_7_42">7:42</string>
    <string name="sulur_kongu_mahal">SULUR KONGU MAHAL</string>
    <string name="muthugoundenpudur">MUTHUGOUNDENPUDUR</string>
    <string name="_7_55">7:55</string>
    <string name="pollachi_old_bus_stand">POLLACHI OLD BUS STAND</string>
    <string name="vadakipalayam_pirivu">VADAKIPALAYAM PIRIVU</string>
    <string name="okkili_palayam">OKKILI PALAYAM</string>
    <string name="malumiccham_patti">MALUMICCHAM PATTI</string>
    <string name="chettipalayam">CHETTIPALAYAM</string>
    <string name="pappam_patti">PAPPAM PATTI</string>
    <string name="peedam_palli_pirivu">PEEDAM PALLI PIRIVU</string>
    <string name="naduppalayam_pirivu">NADUPPALAYAM PIRIVU</string>
    <string name="bharathi_puram">BHARATHI PURAM</string>
    <string name="pappampatti_pirivu">PAPPAMPATTI PIRIVU</string>
    <string name="irugur_pirivu">IRUGUR PIRIVU</string>
    <string name="welcome">WELCOME!!</string>
    <string name="register">REGISTER</string>
    <string name="name">Name</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>