<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".Busno6">
    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:stretchColumns="0,1,2">
    <!-- Table rows and cells will go here -->
    <TableRow>
        <!-- Column 1 -->
        <TextView
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/s_no"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <!-- Column 2 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/stops"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <!-- Column 3 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </TableRow>
    <TableRow android:layout_marginTop="50px">
        <!-- Column 1 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_01"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <!-- Column 2 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/mandripalayam"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <!-- Column 3 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_6_55"
            android:gravity="end"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </TableRow>
    <TableRow android:layout_marginTop="20px">
        <!-- Column 1 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_02"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <!-- Column 2 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/keethanur"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <!-- Column 3 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_7_00"
            android:gravity="end"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </TableRow>
    <TableRow android:layout_marginTop="20px">
        <!-- Column 1 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_03"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <!-- Column 2 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/palladam_bus_stand"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <!-- Column 3 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_7_10"
            android:gravity="end"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </TableRow>
    <TableRow android:layout_marginTop="20px">
        <!-- Column 1 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_04"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <!-- Column 2 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/palladam_ctc"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <!-- Column 3 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_7_12"
            android:gravity="end"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </TableRow>
    <TableRow android:layout_marginTop="20px">
        <!-- Column 1 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_05"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <!-- Column 2 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/panapatti_pirivu"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <!-- Column 3 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_7_15"
            android:gravity="end"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </TableRow>
    <TableRow android:layout_marginTop="20px">
        <!-- Column 1 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_06"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <!-- Column 2 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/iyyampalayam"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <!-- Column 3 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_7_20"
            android:gravity="end"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </TableRow>
    <TableRow android:layout_marginTop="20px">
        <!-- Column 1 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_07"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <!-- Column 2 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/lakshmi_mill"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <!-- Column 3 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_7_25"
            android:gravity="end"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </TableRow>
    <TableRow android:layout_marginTop="20px">
        <!-- Column 1 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_08"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <!-- Column 2 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/karanampettai"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <!-- Column 3 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_7_35"
            android:gravity="end"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </TableRow>
    <TableRow android:layout_marginTop="20px">
        <!-- Column 1 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_09"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <!-- Column 2 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/sulur_airforce"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <!-- Column 3 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_7_40"
            android:gravity="end"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </TableRow>
    <TableRow android:layout_marginTop="20px">
        <!-- Column 1 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_10"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <!-- Column 2 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/kangeyam"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <!-- Column 3 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_7_42"
            android:gravity="end"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </TableRow>
    <TableRow android:layout_marginTop="20px">
        <!-- Column 1 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_11"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <!-- Column 2 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/sulur_kongu_mahal"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <!-- Column 3 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_7_45"
            android:gravity="end"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </TableRow>
    <TableRow android:layout_marginTop="20px">
        <!-- Column 1 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_12"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <!-- Column 2 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/muthugoundenpudur"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <!-- Column 3 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_7_55"
            android:gravity="end"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </TableRow>
    <TableRow android:layout_marginTop="20px">
        <!-- Column 1 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_13"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <!-- Column 2 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="KURUMBEMPALAYAM"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <!-- Column 3 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_8_00"
            android:gravity="end"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </TableRow>
    <TableRow android:layout_marginTop="20px">
        <!-- Column 1 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_14"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <!-- Column 2 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/college"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <!-- Column 3 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_8_15"
            android:gravity="end"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </TableRow>

    </TableLayout>
    <Button
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:id="@+id/bus1"
        android:layout_below="@id/table"
        android:layout_marginTop="21dp"
        android:layout_centerInParent="true"
        android:text="@string/get_location" />



</RelativeLayout>